[tool.poetry]
name = "backend-start"
version = "0.1.0"
description = "Simple REST API service"
authors = ["L1mple <L1mple@rambler.ru>"]
readme = "README.md"
packages = [{include = "backend_start"}]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.6.5"
anyio = "3.6.1"
appdirs = "1.4.4"
asgiref = "3.3.4"
attrs = "22.1.0"
black = "21.6b0"
CacheControl = "0.12.11"
cachy = "0.3.0"
certifi = "2021.5.30"
charset-normalizer = "2.1.1"
cleo = "1.0.0a5"
click = "8.0.1"
colorama = "0.4.4"
crashtest = "0.3.1"
distlib = "0.3.6"
dulwich = "0.20.46"
fastapi = "0.65.2"
FastAPI-SQLAlchemy = "0.2.1"
filelock = "3.8.0"
greenlet = "1.1.0"
h11 = "0.12.0"
html5lib = "1.1"
idna = "3.4"
jsonschema = "4.16.0"
keyring = "23.9.3"
lockfile = "0.12.2"
loguru = "0.6.0"
Mako = "1.1.4"
MarkupSafe = "2.0.1"
more-itertools = "8.14.0"
msgpack = "1.0.4"
mypy-extensions = "0.4.3"
packaging = "21.3"
pathspec = "0.8.1"
pexpect = "4.8.0"
pipenv = "2021.5.29"
pkginfo = "1.8.3"
platformdirs = "2.5.2"
poetry = "1.2.1"
poetry-core = "1.2.0"
poetry-plugin-export = "1.1.1"
psycopg2 = "2.9.1"
ptyprocess = "0.7.0"
pydantic = "1.8.2"
pylev = "1.4.0"
pyparsing = "3.0.9"
pyrsistent = "0.18.1"
python-dateutil = "2.8.1"
python-dotenv = "0.18.0"
python-editor = "1.0.4"
pywin32-ctypes = "0.2.0"
regex = "2021.4.4"
requests = "2.28.1"
requests-toolbelt = "0.9.1"
shellingham = "1.5.0"
six = "1.16.0"
sniffio = "1.3.0"
SQLAlchemy = "1.4.19"
starlette = "0.14.2"
toml = "0.10.2"
tomlkit = "0.11.5"
typing-extensions = "3.10.0.0"
urllib3 = "1.26.12"
uvicorn = "0.14.0"
virtualenv = "20.4.7"
virtualenv-clone = "0.5.4"
webencodings = "0.5.1"
win32-setctime = "1.1.0"
sqlmodel = "^0.0.8"
prometheus-client = "^0.14.1"
prometheus-fastapi-instrumentator = "^5.9.1"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
